--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <H1>New World is comming</H1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores aut, tempore dolores obcaecati consequuntur blanditiis? A quidem soluta nemo facere esse quo ut! Odio sint voluptatum tempore, aliquid accusantium consequuntur?</p>
     <script src="app.js"></script>
 </body>
 </html>
